[package]
name = "cg_grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.22.0"

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
rand = "0.8"
itertools = "0.13.0"


